Dont use Collectors.toList()