@@ -10,7 +10,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.Nullable;
 import jakarta.persistence.CascadeType;
@@ -589,6 +588,6 @@ public class User extends AbstractAuditingEntity implements Participant {
         return new org.springframework.security.core.userdetails.User(user.getLogin(), user.getPassword(), user.getActivated(), true, // accountNonExpired
                 true, // credentialsNonExpired
                 true, // accountNonLocked
-                user.getAuthorities().stream().map(authority -> new SimpleGrantedAuthority(authority.getName())).collect(Collectors.toList()));
+                user.getAuthorities().stream().map(authority -> new SimpleGrantedAuthority(authority.getName())).toList());
     }
 }
